reorganização do portfólio - novas pastas e estrutura limpa

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
             gap: 7px;
 
             h1 {
-                * {
+                pre {
                     font-size: 10px;
                     color: #df2531;
                 }
