--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@
                     font-size: 10px;
                     color: #df2531;
                 }
+
+                img {
+                    height: 80px;
+                    object-fit: cover;
+                    mix-blend-mode: hard-light;
+                    margin-left: -18px;
+                }
             }
 
             h2 {
@@ -46,7 +53,7 @@
             ul {
                 display: flex;
                 flex-wrap: wrap;
-                gap: 15px;
+                gap: 7px;
             }
 
             section {
@@ -56,10 +63,10 @@
                 gap: 15px;
                 max-width: 95%;
 
-                h3{
+                h3 {
                     margin-bottom: 4px;
-                        cursor: pointer;
-                        font-size: 20px;
+                    cursor: pointer;
+                    font-size: 20px;
                 }
             }
         }
